Add search API
